# visionsystem

./: .gitignore  .travis.yml  CMakeLists.txt
CMakeModules/: FindFreenect.cmake  plugin.pc.cmake
cmake/: FindDc1394.cmake  FindDl.cmake  plugin.pc.cmake
controllers/: CMakeLists.txt
controllers/linux/: CMakeLists.txt
controllers/linux/camdc1394/: CMakeLists.txt
controllers/linux/camdc1394/src/: camera1394.cpp  camera1394.h  camera_apply_settings.cpp  camera_parse_config_line.cpp  camera_save_capa.cpp  controller.cpp  controller.h  utils.cpp  utils.h
controllers/linux/camv4l2/: CMakeLists.txt
controllers/linux/camv4l2/src/: camerav4l2.cpp  camerav4l2.h  controller.cpp  controller.h
controllers/linux/kinect/: CMakeLists.txt
controllers/linux/kinect/src/: controller.cpp  controller.h  kinectcamera.cpp  kinectcamera.h
controllers/noarch/: CMakeLists.txt
controllers/noarch/filestream/: CMakeLists.txt
controllers/noarch/filestream/src/: camerafilestream.cpp  camerafilestream.h  controllerfilestream.cpp  controllerfilestream.h
controllers/noarch/imgcam/: CMakeLists.txt
controllers/noarch/imgcam/src/: imgcontroller.cpp  imgcontroller.h
controllers/noarch/openni/: CMakeLists.txt
controllers/noarch/openni/etc/: sample.conf  sample.xml
controllers/noarch/openni/src/: cameraopenni.cpp  cameraopenni.h  controlleropenni.cpp  controlleropenni.h
controllers/noarch/socket/: CMakeLists.txt
controllers/noarch/socket/src/: camerasocket.cpp  camerasocket.h  controllersocket.cpp  controllersocket.h
controllers/win/: CMakeLists.txt
core/: CMakeLists.txt
core/src/: main.cpp  thread.h  vscore.cpp
core/vs_core/: CMakeLists.txt
core/vs_core/src/: main.cpp  thread.h  vscore.cpp  vscore.h
debug/: vision_server.supp
lib/: CMakeLists.txt  config.h.in  visionsystemConfig.cmake.in
lib/include/visionsystem/: buffer.h  buffer.hpp  camera.h  controller.h  controller.hpp  frame.h  genericcamera.h  imagefill.hpp  plugin.h  plugin.hpp  viewer.h  visionsystem.h  visionsystem.hpp  withviewer.h
lib/src/: camera.cpp  controller.cpp  frame.cpp  genericcamera.cpp  image_fill.cpp  plugin.cpp  viewer.cpp  visionsystem.cpp  withviewer.cpp
plugins/: CMakeLists.txt
plugins/dummy/: CMakeLists.txt
plugins/dummy/src/: dummy.cpp  dummy.h
plugins/dump2disk/: CMakeLists.txt
plugins/dump2disk/src/: plugin.cpp  plugin.h
plugins/dump2socket/: CMakeLists.txt
plugins/dump2socket/src/: dump2socket.cpp  dump2socket.h
plugins/glview/: CMakeLists.txt
plugins/glview/src/: glwindow.h  glx_window.cpp  plugin.cpp  plugin.h
plugins/grab/: CMakeLists.txt
plugins/grab/src/: grab.cpp  grab.h
plugins/movie-maker/: CMakeLists.txt
plugins/movie-maker/src/: movie-maker.cpp  movie-maker.h
plugins/sdlview/: CMakeLists.txt
plugins/sdlview/src/: plugin.cpp  plugin.h
plugins/sequence-grabber/: CMakeLists.txt
plugins/sequence-grabber/etc/: sequence-grabber.conf
plugins/sequence-grabber/src/: sequence-grabber.cpp  sequence-grabber.h
plugins/shutdown/: CMakeLists.txt
plugins/shutdown/src/: shutdown.cpp  shutdown.h
plugins/stream2socket/: CMakeLists.txt  config.h.in
plugins/stream2socket/src/: stream2socket.cpp  stream2socket.h  stream2socketprocess.cpp  stream2socketprocess.h
plugins/xmlrpc/: CMakeLists.txt
plugins/xmlrpc/client/: CMakeLists.txt
plugins/xmlrpc/client/src/: xmlrpc-client.cpp  xmlrpc-client.h
plugins/xmlrpc/server/: CMakeLists.txt
plugins/xmlrpc/server/src/: xmlrpc-server.cpp  xmlrpc-server.h
utils/: CMakeLists.txt  bin2png.cpp  kill-vs_core  vs_bin2mkv.cpp  vs_bin2pgm.cpp  vs_bin2png.cpp  vs_config_camdc1394  vs_pgm2bin.cpp  vs_png2bin.cpp
utils/output/: matroska_ebml.c
