
add_subdirectory ( "dummy" )
add_subdirectory ( "dump2disk" ) 	
add_subdirectory ( "dump2socket" ) 	
add_subdirectory ( "stream2socket" ) 	
add_subdirectory ( "shutdown"  )
add_subdirectory ( "grab" )
add_subdirectory ( "glview" )
add_subdirectory ( "xmlrpc" )
add_subdirectory ( "sequence-grabber" )
add_subdirectory ( "sdlview" )

#add_subdirectory ("pinholecam") 	 TODO
#add_subdirectory ("stereopair") 	 TODO

